# gravity_simulator_omp

./: CMakeLists.txt  README.md  clase_apoyo.cpp  paos.cpp  paos.hpp  psoa  psoa.cpp  psoa.hpp  sim_aos.cpp  sim_soa.cpp  sim_soa.hpp
